Changelog
=========

1.10.0 (2016-??-??)
-------------------
- Add searchFacet

1.9.0 (2016-10-03)
------------------
- Add attributesToRetrieve to getObjects
- Add support for restrictSources
- Rename master/slaves to primary/replicas

1.8.4 (2016-08-17)
------------------
- Fix builder to support App Engine

1.8.2 (2016-07-13)
------------------
- Fix batchSynonyms targeting slaves

1.8.1 (2016-06-22)
------------------
- Add exactOnSingleWordQuery & alternativesAsExact
- Add removeStopWords=list of languages
- Add aroundRadius=all
- Add forwardToSlaves in changeSettings
- Fix saveSynonyms method signature

1.8.0 (2016-06-01)
------------------
- Add support for synonyms

1.7.0 (2016-05-24)
------------------
- Add minimumAroundRadius parameter
- Reduce all timeouts to 2 seconds
- Drop support for Java 1.6

1.6.6 (2016-02-01)
------------------
- Add validUntil as a query parameter
- Add restrictIndices as a query parameter

1.6.5 (2016-01-28)
------------------
- Add snippetEllipsisText as a search parameter

1.6.4 (2015-12-29)
------------------
- Fix DNS records used by the deleteObject method

1.6.3
------------------
- Skipped version

1.6.2
------------------
- Skipped version

1.6.1 (2015-12-02)
------------------
- Improve the performance of the deleteByQuery method

1.6.0 (2015-10-29)
------------------
- New Secured API keys format

1.5.0 (2015-10-12)
------------------
- Added remove stop words query parameter
- Added support of similar queries

1.4.0 (2015-10-02)
------------------
- Upgrade to httpclient 4.5.1

1.3.17 (2015-09-30)
-------------------
- Added support of multiple bounding box for geo-search
- Added support of polygon for geo-search
- Added support of automatic radius computation for geo-search
- Added support of disableTypoToleranceOnAttributes

1.3.16 (2015-09-21)
-------------------
- Ensure the JSON answer is read before trying to tokenize to throw IOException instead of JSONException

1.3.15 (2015-09-15)
-------------------