@@ -3,7 +3,8 @@ Changelog
 
 1.10.0 (2016-??-??)
 -------------------
-- Add searchFacet
+- Add searchInFacetValues
+- New stateful retry strategy
 
 1.9.0 (2016-10-03)
 ------------------
